--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"cors": "2.8.5",
+		"cors": "^2.8.5",
 		"nodemon": "2.0.12"
 	},
 	"dependencies": {
